# RustBasicDemos

./: README.md
archive/data_lifecycle/: Cargo.toml
archive/data_types/: Cargo.toml
archive/demo_lib/: Cargo.toml
archive/demo_test/: Cargo.toml
archive/ops_probes/: Cargo.toml
archive/string8_experiment/: Cargo.toml
archive/string_atrocities/: main.rs
code_structure_demo/component_a/: Cargo.toml
code_structure_demo/component_b/: Cargo.toml
code_structure_demo/executive/: Cargo.toml
data_lifecycle/: Cargo.toml
data_lifecycle/src/: main.rs
data_types/src/: main.rs  main1.rs.html
demo_lib/: Cargo.toml  cargo1.toml.html
demo_lib/src/: lib.rs
demo_test/: Cargo1.toml.html
demo_test/src/: helper1.rs.html  main1.rs.html
display/: Cargo.toml
display/examples/: demo_display.rs  demo_display1.rs.html
display/src/: lib.rs  lib1.rs.html
display_test/: Cargo.toml
display_test/src/: main.rs
enum_probes/: Cargo.toml
enum_probes/src/: main.rs  main1.rs.html
error_probes/: Cargo.toml  foobar.txt
file_io/: Cargo.toml  first_test.txt
function_probes/: Cargo.toml
generics_probes/: Cargo.toml
iterator_probes/: Cargo.toml
lambda_probes/: Cargo.toml
logger/: Cargo.toml  cbuild.bat  cclean.bat  cdoc.bat  crun.bat  err.txt  log.txt
logger/bats/: ctest.bat
logger/examples/: test1.rs  test11.rs.html
logger/src/: lib.rs  lib1.rs.html  main.rs
logger_test/: log.txt
rust_modules/: read_me.txt
rust_probes/: Cargo.toml
string_probes/: Cargo.toml
struct_probes/: Cargo.toml  log.txt
vector_probes/: Cargo.toml
(+57 files in other folders)
