[package]
name = "logger"
version = "0.1.0"
authors = ["James W. Fawcett <jfawcett@twcny.rr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# prevents rustc from attempting to compile doc comments
doctest = false

[dependencies]
chrono = "0.2.16"
display = { path = "../display" }
